<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/RelativeLayout1" android:background="@drawable/space_caker_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/button1" android:background="@drawable/custom_button" android:clickable="true" android:layout_width="179.0dip" android:layout_height="60.0dip" android:layout_marginTop="120.0dip" android:text="@string/mount" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:onClick="enableMSC" />
    <Button android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/button2" android:background="@drawable/custom_button" android:clickable="true" android:layout_width="179.0dip" android:layout_height="60.0dip" android:layout_marginTop="200.0dip" android:text="@string/unmount" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:onClick="disableMSC" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:textColor="#ff10c4ff" android:gravity="center" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/info1" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
    <TextView android:gravity="center" android:id="@id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="36.0dip" android:text="@string/credits" android:layout_below="@id/button2" android:layout_centerHorizontal="true" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textStyle="bold" android:textColor="#ffff9600" android:gravity="center" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="17.0dip" android:text="@string/note" android:layout_below="@id/textView1" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="center" android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/info2" android:layout_below="@id/textView2" android:layout_alignParentLeft="true" />
</RelativeLayout>